@@ -80,6 +80,18 @@ elsif( $verbose )
     Torrus::Log::setLevel('verbose');
 }
 
+# This will ensure that all databases get closed correctly
+$SIG{'TERM'} = sub
+{
+    exit 1;
+};
+
+$SIG{'INT'} = sub
+{
+    exit 1;
+};
+
+
 my $class = $Torrus::ReportGenerator::modules{$report};
 eval( 'require ' . $class );
 die( $@ ) if $@;
