@@ -72,7 +72,9 @@ my %collector_params =
                  'GAUGE' => undef,
                  'COUNTER32' => undef,
                  'COUNTER64' => undef },
-             'ext-service-id' => undef }},
+             'ext-service-id' => undef,
+             '+ext-service-units' => {
+                 'bytes' => undef }}},
      'collector-period'      => undef,
      'collector-timeoffset'  => undef,
      '+collector-scale'      => undef,
